# RAG_Doc_QA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mentor_questions.md  pyproject.toml  requirements.txt
app/:  __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  logging.py
app/generation/: __init__.py  answerer.py
app/ingestion/: __init__.py  chunking.py  loaders.py
app/retrieval/: __init__.py  hyde.py  multiquery.py  vectorstore.py
app/schemas/: __init__.py  models.py
data/db/chroma_db/08a3a912-d2fc-4500-906d-88f6cadbbb1c/: index_metadata.pickle
docs/: architecture.md  evaluation.md  setup.md  troubleshooting.md
eval/: generate_testset.py  run_ragas.py
test/: conftest.py  test_api.py  test_chunking.py  test_retrieval.py
