[project]
name = "1-rag-doc-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "cryptography>=49.0.0",
    "datasets>=5.0.0",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.5",
    "langchain-openrouter>=0.2.3",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.15",
    "markdown>=3.10.2",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "ragas>=0.4.3",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.1",
    "uvicorn[standard]>=0.49.0",
]
