[project]
name = "1-rag-doc-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "cryptography>=49.0.0",
    "datasets>=5.0.0",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "langchain>=0.3,<0.4",
    "langchain-chroma>=0.1,<0.3",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.2,<0.3",
    "langchain-huggingface>=0.3.1",
    "langchain-mistralai>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    "langchain-text-splitters>=0.3,<0.4",
    "langsmith>=0.8.15",
    "markdown>=3.10.2",
    "numpy>=2.1,<2.3",
    "pandas==2.2.3",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "pytest>=9.1.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "ragas>=0.4,<0.5",
    "sentence-transformers>=5.6.0",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.1",
    "uvicorn[standard]>=0.49.0",
]
